[gd_scene load_steps=4 format=3 uid="uid://cgc3v7im766n3"]

[ext_resource type="FontFile" uid="uid://b0ba52ukqgt87" path="res://Assets/Fonts/PixelOperator8-Bold.ttf" id="1_3abll"]
[ext_resource type="Script" uid="uid://d3cdmr0nvf2mn" path="res://Scripts/UI/settings.gd" id="1_p46qs"]
[ext_resource type="FontFile" uid="uid://3e2nchtdogv" path="res://Assets/Fonts/PixelOperator8.ttf" id="2_8eg68"]

[node name="Settings" type="CanvasLayer"]
visible = false
script = ExtResource("1_p46qs")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 267.0
offset_top = 149.0
offset_right = 307.0
offset_bottom = 189.0

[node name="MusicLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 240.0
offset_top = 59.0
offset_right = 396.0
offset_bottom = 91.0
theme_override_fonts/font = ExtResource("1_3abll")
theme_override_font_sizes/font_size = 32
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Control"]
layout_mode = 0
offset_left = 168.0
offset_top = 70.0
offset_right = 472.0
offset_bottom = 175.0
max_value = 1.0
step = 0.01

[node name="SFXLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 281.0
offset_top = 176.0
offset_right = 437.0
offset_bottom = 208.0
theme_override_fonts/font = ExtResource("1_3abll")
theme_override_font_sizes/font_size = 32
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Control"]
layout_mode = 0
offset_left = 172.0
offset_top = 232.0
offset_right = 474.0
offset_bottom = 248.0
max_value = 1.0
step = 0.01

[node name="ReturnButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 233.0
offset_top = 266.0
offset_right = 427.0
offset_bottom = 336.0
theme_override_fonts/font = ExtResource("2_8eg68")
theme_override_font_sizes/font_size = 24
text = "Return"
flat = true

[node name="Sky" type="CanvasLayer" parent="Control"]
layer = -100
visible = false

[node name="ColorRect" type="ColorRect" parent="Control/Sky"]
show_behind_parent = true
z_index = -100
offset_left = -10.0
offset_top = -13.0
offset_right = 990.0
offset_bottom = 987.0
color = Color(0.2257, 0.449875, 0.61, 1)

[node name="SkyModulate" type="CanvasModulate" parent="Control/Sky"]
color = Color(0, 0, 0, 1)

[connection signal="value_changed" from="Control/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Control/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="button_up" from="Control/ReturnButton" to="." method="_on_return_button_button_up"]
